--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,7 +10,7 @@ application.secret="E27D^[_<Lpt0vjad]de;3/i;tx3gpRmG4Byof/3nahO/dIo9gbsMWut1w3xg
 
 # The application languages
 # ~~~~~
-application.langs="ja"
+application.langs="en"
 
 # Database configuration
 # ~~~~~
