--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,7 +10,11 @@ application.secret="E27D^[_<Lpt0vjad]de;3/i;tx3gpRmG4Byof/3nahO/dIo9gbsMWut1w3xg
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="ja"
+
+# root url
+application.context="/pf"
+#http.address="127.0.0.1"
 
 # Database configuration
 # ~~~~~
